--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -42,3 +42,8 @@ img:hover {
 .big-font {
   font-size: 112%;
 }
+
+/* Sekcija O nama */
+main img {
+  border: 4px solid rgba(255, 255, 255, 0.2);
+}
